0.33

  Add Qpsmtpd::Command to gather all parsing logic in one place (Hanno
  Hecker)

  Fix a spurious newline at the start of messages queued via exim (Devin
  Carraway)

  Make the clamdscan plugin temporarily deny mail if if can't talk to clamd
  (Filippo Carletti)

  Improve Qpsmtpd::Transaction documentation (Fred Moyer)


0.32 - 2006/02/26

  Add logging/file plugin for simple logging to a file (Devin Carraway and
  Peter J. Holzer).

  Add logging/syslog plugin for logging via the syslog facility (Devin
  Carrway)

  Add Qpsmtpd::DSN to return extended SMTP status codes from RFC-1893 and
  patch existing plugins to use it when appropriate (Hanno Hecker).

  Add plugins/tls_cert to generate appropriately shaped self-signed certs for 
  TLS support.  Add explicit use of CA used to sign cert.  Abstract clone()ing
  of connection information when switching to TLS.  Fix the AUTH code to work
  correctly with TLS.

  Add hosts_allow plugin to support pre- and post-connection hooks as well
  as move --max-from-ip tests out of core (Hanno Hecker).

  Improve postfix-queue plugin to support the known processing flags (Hanno
  Hecker).

  Drop root privileges before loading plugins, rather than after.

  A few fixes to the clamdscan plugin (Dave Rolsky)

  Various minor fixes and improvements


0.31.1 - 2005/11/18

  Add missing files to the distribution, oops... (Thanks Budi Ang!)
  (exim plugin, tls plugin, various sample configuration files)


0.31 - 2005/11/16

  STARTTLS support (see plugins/tls)

  Added queue/exim-bsmtp plugin to spool accepted mail into an Exim
  backend via BSMTP. (Devin Carraway)

  New plugin inheritance system, see the bottom of README.plugins for
  more information

  qpsmtpd-forkserver: --listen-address may now be given more than once, to
  request listening on multiple local addresses (Devin Carraway)
  (also: no more signal problems making qpsmtpd-forkserver crash/loop
  when forking).
